--- a/packages/docusaurus-theme-classic/src/theme/Layout/styles.css
+++ b/packages/docusaurus-theme-classic/src/theme/Layout/styles.css
@@ -23,4 +23,5 @@ body {
 
 .main-wrapper {
   flex: 1 0 auto;
+  display: flex;
 }
